--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "cub3d.h": "c",
         "stdio.h": "c",
-        "mlx42.h": "c"
+        "mlx42.h": "c",
+        "libft.h": "c"
     }
 }
