--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "cub3d.h": "c",
         "stdio.h": "c",
         "mlx42.h": "c",
-        "libft.h": "c"
-    }
+        "libft.h": "c",
+        "algorithm": "c",
+        "format": "c"
+    },
+    "cmake.sourceDirectory": "/home/sbibers/cub3d/MLX42/tests"
 }
