My code is done norminette and check for everything.

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -19,7 +19,7 @@ OBJS = $(SRCS:$(SRCS_DIR)/%.c=$(OBJS_DIR)/%.o)
 
 CC			= @cc
 RM			= @rm -f
-CFLAGS			= -Wall -Wextra -Werror -I.
+CFLAGS			= -Wall -Wextra -Werror -g -I.
 
 NAME			= libft.a
 
